--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "mongoose": "^5.13.3",
+    "query-string": "^7.0.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
