--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "fristail27@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
